# tree-calculus

./: CHANGELOG.md  LICENSE  README.md  stack.yaml  tree-calculus.cabal
src/: Logic.hs  Number.hs  Pair.hs  Tree.hs  TreeCalculus.hs
test/: test.hs
test/Test/: Checks.hs  Generators.hs  LogicSpec.hs  NumberSpec.hs  PairSpec.hs  TreeSpec.hs
test/Test/Tasty/: Extensions.hs
